@@ -6,11 +6,11 @@ progs = '''
 agc aliasp bandpass bin bin1 boxsmooth canny causint clip cmatmult
 cmatmult2 cosft costaper deriv dipfilter dwt enoint2 equal extract
 fern fft1 fft3 grad2 grad3 heat histogram igrad intshow inttest1
-inttest2 impl1 impl2 impl3 jacobi jacobi2 lapfill laplac linefit lpad
-mandelbrot matmult max1 miss2 monof monof2 mutter noise polymask
-postfilter2 pow reg2tri remap1 roots shapebin shapebin1 sharpen slice
-smooth smoothder smoothreg2 spectra spectra2 spline splinefilter
-swtdenoise threshold trapez tri2reg trirand unif2 unif3
+inttest2 impl1 impl2 impl3 jacobi jacobi2 lapfill laplac linear
+linefit lpad mandelbrot matmult max1 miss2 monof monof2 mutter noise
+polymask postfilter2 pow reg2tri remap1 roots shapebin shapebin1
+sharpen slice smooth smoothder smoothreg2 spectra spectra2 spline
+splinefilter swtdenoise threshold trapez tri2reg trirand unif2 unif3
 '''
 
 try:  # distributed version
